[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu/Graphics/theme/defaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/Graphics/MapSelection/MapSelectNormal.png" type="Texture" id=2]
[ext_resource path="res://Menu/Graphics/MapSelection/MapSelectPressed.png" type="Texture" id=3]
[ext_resource path="res://Menu/Graphics/MapSelection/MapSelectHover.png" type="Texture" id=4]
[ext_resource path="res://Menu/Graphics/MapSelection/MapSelectPressedSelected.png" type="Texture" id=5]
[ext_resource path="res://Menu/Buttons/MapSelectButton.gd" type="Script" id=6]

[node name="MapSelectButton" type="TextureButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 31.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
script = ExtResource( 6 )
_sections_unfolded = [ "Focus", "Textures" ]
mapPreview = null
gameScenePath = ""
gameName = ""

[connection signal="mouse_entered" from="." to="." method="onFocusEntered"]

[connection signal="mouse_exited" from="." to="." method="OnFocusExited"]

[connection signal="pressed" from="." to="." method="onButtonPressed"]


